# AceStep

./: .env  README.md  config.json  profile_inference.py  proxy_config.txt.example  pyproject.toml  requirements.txt
.claude/skills/acestep-docs/guides/: INFERENCE.md
acestep/: acestep_v15_pipeline.py  api_server.py  audio_utils.py  audio_utils_test.py  gpu_config.py  handler.py  inference.py  llm_inference.py  model_downloader.py  openrouter_adapter.py
acestep/api/: model_download.py  startup_llm_init.py
acestep/api/http/: model_init_service.py  release_task_audio_paths.py  release_task_audio_paths_test.py  release_task_models.py  sample_format_routes.py
acestep/core/generation/handler/: batch_prep.py  conditioning_batch_test.py  conditioning_embed_test.py  conditioning_masks.py  conditioning_masks_test.py  generate_music.py  generate_music_execute.py  generate_music_payload_test.py  generate_music_request_test.py  generate_music_test.py  init_service_loader.py  init_service_orchestrator.py  init_service_setup.py  io_audio.py  io_audio_test.py  mlx_vae_encode_native.py  padding_utils.py  progress.py  reference_audio_validation_test.py  repaint_waveform_splice.py  (+3 more)
acestep/models/base/: modeling_acestep_v15_base.py
acestep/models/sft/: modeling_acestep_v15_base.py
acestep/third_parts/nano-vllm/: pyproject.toml
acestep/training/: path_safety.py
acestep/training/dataset_builder_modules/: preprocess_vae.py
acestep/training_v2/: preprocess_vae.py
acestep/ui/streamlit/: README.md  config.py  main.py
docs/en/: INSTALL.md
openrouter/: openrouter_api_server.py
scripts/: prepare_vae_calibration_data.py  profile_vram.py
ui/: studio.html
(+37 files in other folders)
