[project]
name = "ace-step"
version = "1.5.0.4"
description = "ACE-Step 1.5"
readme = "README.md"
requires-python = "==3.11.*"
license = {text = "MIT"}
dependencies = [
    # PyTorch for Windows with CUDA 13.0
    "torch==2.10.0+cu130",
    "torchaudio==2.10.0+cu130",
    # Common dependencies
    "transformers>=4.51.0,<4.58.0",
    "diffusers",
    "gradio==6.2.0",
    "matplotlib>=3.7.5",
    "scipy>=1.10.1",
    "soundfile>=0.13.1",
    "loguru>=0.7.3",
    "einops>=0.8.1",
    "accelerate>=1.12.0",
    "fastapi>=0.110.0",
    "diskcache",
    "uvicorn[standard]>=0.27.0",
    "numba>=0.63.1",
    "vector-quantize-pytorch>=1.27.15",
    "torchcodec>=0.9.1",
    "torchao==0.15.0",
    "toml",
    # Training dependencies
    "peft>=0.18.0",
    "lycoris-lora",
    "lightning>=2.0.0",
    "tensorboard>=2.0.0",
    # Local third-party packages
    "nano-vllm",
    "modelscope",
    "tensorboard>=2.20.0",
    "typer-slim>=0.21.1",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
nano-vllm = { path = "acestep/third_parts/nano-vllm" }
torch = [{ index = "pytorch-cu130" }]
torchvision = [{ index = "pytorch-cu130" }]
torchaudio = [{ index = "pytorch-cu130" }]

[project.scripts]
acestep = "acestep.acestep_v15_pipeline:main"
acestep-api = "acestep.api_server:main"
acestep-download = "acestep.model_downloader:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []

[tool.hatch.build.targets.wheel]
packages = ["acestep"]
